--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "contacts app with a to-do list",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "styles": "tailwindcss -i ./src/input.css -o ./src/output.css --watch"
   },
   "author": "Ander Cabrera",
   "license": "ISC",
