--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "styles": "tailwindcss -i ./src/input.css -o ./src/output.css --watch"
+    "styles": "tailwindcss -i ./src/input.css -o ./src/output.css --watch",
+    "start": "live-server ./src --watch=./src"
   },
   "author": "Ander Cabrera",
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.4.1"
+  },
+  "dependencies": {
+    "live-server": "^1.2.2"
   }
 }
